--- a/css/themes.css
+++ b/css/themes.css
@@ -8,7 +8,6 @@
 .dark-theme-primary {
     color: #ffffff;
     background-color: #263238;
-    box-shadow: none;
 }
 
 .dark-theme-secondary {
